# cube

./: README  shell.nix
.github/workflows/: bld.tadeo.ca.yml  test.yml
comms.tadeo.ca/: README  index.html  main.tsx  package.json  pnpm-lock.yaml  tsconfig.json
crates/bld_tadeo_ca/: Cargo.toml  index.html  main.js
crates/bld_tadeo_ca/mbld/: index.html  mbld.js
crates/bld_tadeo_ca/src/: lib.rs  tests.rs
crates/comm_finder/: Cargo.toml  index.html  main.js
crates/comm_finder/data/: blddb.csv  custom.csv  excel.csv  google.csv  simple.csv
crates/comm_finder/src/: commutator.js  main.rs
crates/cube/: Cargo.toml
crates/cube/src/: corners.rs  cube.rs  edges.rs  lib.rs  obliques.rs  tables.rs  tcenters.rs  tests.rs  wings.rs  xcenters.rs
crates/cube/src/corners/: fixed.rs
crates/cube/testdata/: rotate.txt  rotate_orientation.txt
crates/cube/testdata/anysticker/: 1x1x1.txt  2x2x2.txt  3x3x3.txt  4x4x4.txt  5x5x5.txt  6x6x6.txt  7x7x7.txt  8x8x8.txt  9x9x9.txt
crates/cube_3d/: Cargo.toml
crates/cube_3d/src/: lib.rs
crates/cube_bld/: Cargo.toml
crates/cube_bld/src/: lib.rs  tests.rs
crates/cube_desktop/: Cargo.toml
crates/cube_desktop/src/: main.rs  shader.wgsl
crates/cube_notation/: Cargo.toml
crates/cube_notation/src/: lib.rs
crates/cube_scramblers/: Cargo.toml
crates/cube_scramblers/src/: lib.rs  solve222.rs
crates/misc/: Cargo.toml
crates/misc/src/: main.rs
crates/sheet_dumper/: .gitignore  Cargo.toml  custom.csv  excel.csv  google.csv
crates/sheet_dumper/src/: main.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
