[package]
name = "comm_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
calamine = "0.23.1"
crossbeam-channel = "0.5.10"
csv = "1.3.0"
cube = { path = "../cube" }
cube_bld = { path = "../cube_bld" }
cube_notation = { path = "../cube_notation" }
fnv = "1.0.7"
num_cpus = "1.16.0"
rayon = "1.8.0"
rquickjs = "0.4.0"
struson = "0.3.0"
reqwest = { version = "0.10.9", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
write-json = "0.1.4"
url = "2.5.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
