[package]
name = "cube_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["must_cast"] }
cube = { version = "0.0.0", path = "../cube" }
cube_3d = { version = "0.1.0", path = "../cube_3d" }
env_logger = "0.10.1"
glam = { version = "0.25.0", features = ["bytemuck", "glam-assert"] }
pollster = "0.3.0"
wgpu = "22"
winit = { version = "0.29.10", features = ["rwh_05"] }
